[tool.poetry]
name = "aiovmmanager"
version = "0.1.0"
description = "Async lib based on aiohttp for working with the VMmanager6 API"
authors = ["MOIS3Y <stepan@zhukovsky.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
